--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,8 +1,17 @@
 
   <div class="small-11 medium-10 large-10 small-centered columns">
-
-    <div class="page-title">
-      <%= current_user.name %>'s Courses 
+    <div class="row">
+      <div class="small-6 columns">
+        <div class="page-title">
+          <%= current_user.name %>'s Courses 
+        </div>
+      </div>
+      <div class="small-1 small-offset-5 columns">
+        <div class="add-course">
+          <a href="#" data-reveal-id="new-course">New</a>
+          <%= render "new"%>
+        </div>
+      </div>
     </div>
 
     <div class="row">
@@ -15,14 +24,10 @@
             <dd><a href="#enrolled">
               Enrolled
             </a></dd>
-          <div class="add-course">
-            <a href="#" data-reveal-id="new-course">New</a>
-            <%= render "new"%>
-          </div>
         </dl>
       </div>
 
-      <div class="small-12 medium-10 large-9 columns ">
+      <div class="small-12 medium-9 large-9 columns ">
         <div class="tabs-content vertical row-height">
 
             <div class="content active tab-contents min-row-height" id="created">
