--- a/app/assets/stylesheets/layouts.scss
+++ b/app/assets/stylesheets/layouts.scss
@@ -65,3 +65,7 @@ body > nav > section > ul.left > li:nth-child(2) > a {
   font-size: 0.8125rem;
   vertical-align: top;
 }
+
+.logo > a > img {
+  height: 42px;
+}
