--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -19,6 +19,11 @@
         </li> 
       </ul>
       <%end%>
+      <ul class="left">
+        <li class="logo">
+            <a href="/"><%= image_tag("uschool-04.png")%></a>
+        </li>
+    </ul>
 
     <ul class="right">
         <li class="browse">
