--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -19,10 +19,12 @@
         </li> 
       </ul>
       <%end%>
-      <ul class="left">
+    <ul class="center">
+        <div class="small-5 small-centered columns">
         <li class="logo">
             <a href="/"><%= image_tag("uschool-04.png")%></a>
         </li>
+        </div>
     </ul>
 
     <ul class="right">
