changed user name placeholder

--- a/app/assets/stylesheets/content.scss
+++ b/app/assets/stylesheets/content.scss
@@ -192,6 +192,12 @@ footer  {
   padding: 0 5px 0 5px;
 }
 
+.edit-content-title .fi-x-circle {
+  font-size: 30px;
+  color: #C1877D;
+  padding: 0px 5px 0 5px;
+}
+
 
 .edit-delete-icons  {
   text-align: right;
