--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
   <%= devise_error_messages! %>
 
   <div>
-  <%= f.text_field :name, :autofocus => true, :placeholder => "Name" %></div>
+  <%= f.text_field :name, :autofocus => true, :placeholder => "Your author title" %></div>
 
 
   <div>
