--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,12 +22,13 @@
   <body>
     <%= render "/layouts/nav" %>
 
-    <% if notice or alert %>
+    <% if notice %>
     <div data-alert class="alert-box success radius">
       <p class="notice"><%= notice %></p>
       <a href="#" class="close">&times;</a>
     </div>
-    <div data-alert class="alert-box success radius">
+    <% elsif alert %>
+    <div data-alert class="alert-box warning radius">
       <p class="alert"><%= alert %></p>
       <a href="#" class="close">&times;</a>
     </div>
