--- a/app/assets/stylesheets/layouts.scss
+++ b/app/assets/stylesheets/layouts.scss
@@ -10,13 +10,24 @@ body, html {
   padding:0;
  }
 
-
-.notice {
-  
+.alert-box.success {
+background-color: rgba(112, 176, 169, 1);
+border-color: #3a945b;
+color: white;
+width: 50%;
+margin: 0 auto;
+padding: 5px 5px 5px 5px;
+height: 36px;
 }
 
-.alert  {
-  
+.alert-box.warning  {
+  background-color:  #F44C03;
+  border-color: cc2e06;
+  color: white;
+  width: 50%;
+  margin: 0 auto;
+  padding: 5px 5px 5px 5px;
+  height: 36px;
 }
 
 .top-bar {
