--- a/app/views/sections/_edit_content.html.erb
+++ b/app/views/sections/_edit_content.html.erb
@@ -4,7 +4,9 @@
   <div class="content-container">
     <div class="edit-content-title" >
       <a href="#" data-reveal-id="edit-section"><%= @section.title %></a>
-      <%= link_to "Delete Section", course_section_path, method: :delete %>
+      <%= link_to(course_section_path, method: :delete) do %>
+        <i class="fi-x-circle"></i>   
+      <% end %>
 
     </div>
 
