added intro to sections images

--- a/app/views/sections/_intro.html.erb
+++ b/app/views/sections/_intro.html.erb
@@ -1,12 +1,7 @@
 <!-- This is where the graphic for intro goes -->
 <div class="small-9 columns content-column">
   <div class="intro-column">
-    <h2 class="center-padding"> <---- 
-    Add Sections to your Course, Then click on the section and start adding some resources and content! </h2>
+    <%= image_tag("add a new section-01.png")%>
 
-    <h3 class="center-padding">
-    "Learning is something we do together"</h3>
-    <h3 class="center-padding">
-    "The first thing you have to do is take the auto out of autodidact."</h3>
   </div>
 </div>
