--- a/app/assets/stylesheets/sections.scss
+++ b/app/assets/stylesheets/sections.scss
@@ -72,12 +72,14 @@ row-header  {
 .fi-widget {
   font-size: 30px;
   text-align: right;
+  padding-left: 15px;
   color: white;
 }
 
 .fi-check {
   font-size: 30px;
   text-align: right;
+  padding-left: 15px;
   color: white;
 }
 
