--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,12 +1,12 @@
 
   <div class="small-11 medium-10 large-10 small-centered columns">
     <div class="row">
-      <div class="small-6 columns">
+      <div class="small-9 columns">
         <div class="page-title">
           <%= current_user.name %>'s Courses 
         </div>
       </div>
-      <div class="small-1 columns">
+      <div id="add-course" class="small-1 columns">
         <div class="add-course">
           <a href="#" data-reveal-id="new-course">New</a>
           <%= render "new"%>
