--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -53,6 +53,7 @@
           <p class="glance"><%= @course.users.count %> Enrollments</p>
         </a>
         <%= render "enrollments"%>
+        <p class="glance"><div id="count_to"></div></p>
 
   </div>
 </div>
