--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -161,7 +161,6 @@ text-align:center;
 }
 
 #course_by{
-text-align: center;
 margin-top: -10px;
 font-style: italic;
 }
@@ -181,4 +180,22 @@ color: lightblue;
 
 .each-enrolled  {
   border-top: 1px dashed;
+}
+
+.card-title {
+  background-color: $light-green-blue;
+  padding: 10px 70px 20px 70px;
+  color: white;
+}
+
+.top-margin {
+  margin-top: 50px;
+}
+
+#count_to{
+  padding: 0px;
+}
+
+.hidden {
+  display: none;
 }
