index page image

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -19,6 +19,7 @@
         </li> 
       </ul>
       <%end%>
+    <% if not @index_page %>
     <ul class="center">
         <div class="small-5 small-centered columns">
         <li class="logo">
@@ -26,6 +27,7 @@
         </li>
         </div>
     </ul>
+    <% end %>
 
     <ul class="right">
         <li class="browse">
